assets/js/atomic/blocks/product-elements/price/style.scss
.wc-block-components-product-price {
	margin-top: 0;
	margin-bottom: $gap-small;
	display: block;

	&__regular {
		margin-right: 0.5em;
	}
}
.is-loading {
	.wc-block-components-product-price::before {
		@include placeholder();
		content: ".";
		display: inline-block;
		width: 5em;
	}
	/*rtl:begin:ignore*/
	.wc-block-components-product-price__align-left {
		text-align: left;
	}
	.wc-block-components-product-price__align-center {
		text-align: center;
	}
	.wc-block-components-product-price__align-right {
		text-align: right;
	}
	/*rtl:end:ignore*/
}

